# soltea-agent-gateway

./: .gitignore  DESIGN.md  LICENSE  README.md
agent-runner/: .gitignore  README.md  config.example.json  go.mod  go.sum  main.go
agent-runner/cmd/launcher/: main.go  main_test.go
agent-runner/internal/agent/: agent.go  helpers.go  helpers_test.go
agent-runner/internal/claude/: claude.go  claude_test.go
agent-runner/internal/config/: config.go
agent-runner/internal/protocol/: protocol.go
agent-runner/internal/runlog/: runlog.go  runlog_test.go
agent-runner/internal/selfupdate/: selfupdate.go  selfupdate_test.go
agent-runner/internal/svc/: svc.go
agent-runner/internal/version/: version.go
agent-runner/internal/wsclient/: wsclient.go
agent-runner/scripts/: build.sh
agent-runner/tools/rename-selftest/: go.mod  main.go  rename-selftest.exe.b64.txt
docs/: PROTOCOL.md
gateway/: .env.example  README.md  pyproject.toml
gateway/deploy/: nginx-soltea-agents.conf  soltea-gateway.service
gateway/soltea_gateway/: __init__.py  __main__.py  blobs.py  config.py  connection.py  hub.py  protocol.py  registry.py  server.py  tokenstore.py
gateway/tests/: runner_mock.py  test_e2e.py  test_gateway.py
