[project]
name = "soltea-gateway"
version = "0.1.0"
description = "Gateway di orchestrazione tra Claudia e gli agenti Claude Code remoti"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[project.scripts]
soltea-gateway = "soltea_gateway.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["soltea_gateway"]
